src/gtk/styles.css
.global-search search {
    padding: 12px;
    border-bottom: 1px solid var(--border-color);
}
.global-search search > label {
    font-size: 1.33333em;
    margin-left: 6px;
    margin-right: 6px;
}
.global-search search > text {
    font-size: 1.33333em;
    margin-left: 6px;
    margin-right: 6px;
}
.global-search search > text placeholder {
    opacity: 0.55;
}

.card-row-btn {
    border-radius: 0;
}

.screenshot {
    border-radius: 20px;
}

.browser-banner {
    border-radius: 25px;
    background-color: transparent;
}
.browser-banner-title {
    font-size: 3.2em;
    font-weight: bolder;
}
.browser-banner-subtitle {
    font-size: 2.0em;
    font-weight: bold;
}
.browser-banner-description {
    font-size: 1.33em;
    font-weight: normal;
}

